--- a/analysis/comparing_differnt_settings_ldmm.Rmd
+++ b/analysis/comparing_differnt_settings_ldmm.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "Comparing ld-mismatch setting"
+title: "Compare ld-mismatch setting"
 author: "XSun"
-date: "2025-02-21"
-output: workflowr::wflow_html
-editor_options:
-  chunk_output_type: console
+date: "2025-04-07"
+output:
+  workflowr::wflow_html:
+    code_folding: hide
+    toc: true
 ---
 
 # Introduction
@@ -14,77 +15,649 @@ We compare different ld - mismatch settings
 - remove the ld-mismatched snp, recompute the z-scores and re-do the finemapping
 - re-finemap without LD
 
-# shared_type, pre-estimate L
-
-
 ```{r}
-traits <- c("aFib-ebi-a-GCST006414","IBD-ebi-a-GCST004131","SCZ-ieu-b-5102","T1D-GCST90014023","MDD-ieu-b-102","BIP-ieu-b-5110","ASD-ieu-a-1185","PD-ieu-b-7","WBC-ieu-b-30")
-
-print("The traits need to do LD-mismatch diagnosis:")
-print(traits)
+library(ggplot2)
+folder_results_susieST <- "/project/xinhe/xsun/multi_group_ctwas/15.susie_weights/snakemake_outputs/"
 ```
 
+# IBD-ebi-a-GCST004131
 
-```{r}
+## Setting: shared_all, thin = 0.1, L = 5, susieST
 
-folder_results <- "/project/xinhe/shengqian/ctwas_GWAS_analysis/results/"
+```{r warning=F,message=F}
+trait <- "IBD-ebi-a-GCST004131"
+thin <- 0.1
+var_struc <- "shared_all"
+st <- "with_susieST"
+L <- 5
 
-traits_all <-c()
-gene_pip_snpremoved_all <- c()
-gene_pip_noLD_all <- c()
-gene_id_all <- c()
-genes_names_all <- c()
-for(trait in traits){
-  
-  file_problematic_gene <- paste0(folder_results,trait,"/",trait,".ldmismatch_problematic_genes.RDS")
-  if(file.exists(file_problematic_gene)){
-    
-    problematic_gene <- readRDS(file_problematic_gene)
-    
-    ctwas_res_snpremoved <- readRDS(paste0(folder_results,trait,"/",trait,".ldmismatch_finemap_regions_res.RDS"))
-    ctwas_res_noLD <- readRDS(paste0(folder_results,trait,"/",trait,".ldmismatch_noLD_finemap_regions_res.RDS"))
-    
-    gene_pip_snpremoved <- c()
-    for(i in 1:length(problematic_gene)){
-      
-      gene_pip_snpremoved_tmp <- ctwas_res_snpremoved$finemap_res$susie_pip[ctwas_res_snpremoved$finemap_res$id %in% problematic_gene[i]]
-      if (length(gene_pip_snpremoved_tmp) == 0) {
-        gene_pip_snpremoved <- c(gene_pip_snpremoved,-1)
-      }else{
-        gene_pip_snpremoved <-c(gene_pip_snpremoved,gene_pip_snpremoved_tmp)
-      }
-      
-    }
-  
-    gene_pip_noLD <- ctwas_res_noLD$finemap_res$susie_pip[ctwas_res_noLD$finemap_res$id %in% problematic_gene]
-    
-    problematic_gene_cleaned <- sub("\\|.*", "", problematic_gene)  # Extract part before '|'
+ctwas_res_origin <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".finemap_regions_res.RDS"))
+finemap_res_origin <- ctwas_res_origin$finemap_res
+finemap_res_gene_origin <- finemap_res_origin[finemap_res_origin$type != "SNP",]
 
-    mapped_gene_names <- mapping_two %>%
-      dplyr::filter(molecular_id %in% problematic_gene_cleaned) %>%
-      dplyr::select(molecular_id, gene_name)
-
-    traits_all <- c(traits_all, rep(trait, length(problematic_gene)))
-    gene_pip_snpremoved_all <- c(gene_pip_snpremoved_all,gene_pip_snpremoved)
-    gene_pip_noLD_all <- c(gene_pip_noLD_all, gene_pip_noLD)
-    gene_id_all <- c(gene_id_all, problematic_gene)
-    genes_names_all <- c(genes_names_all, mapped_gene_names$gene_name)
-    
-  }
-  
-  
-}
-
-df <- data.frame(trait = traits_all,
-                 gene_name = genes_names_all,
-                 gene_id = gene_id_all,
-                 gene_pip_noLD = round(gene_pip_noLD_all,digits = 4),
-                 gene_pip_snpremoved_all = round(gene_pip_snpremoved_all,digits = 4))
-
+ctwas_res_regionmerge <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".regionmerge_finemap_regions_res.RDS"))
+finemap_res_regionmerge <- ctwas_res_regionmerge$finemap_res
+finemap_res_gene_regionmerge <- finemap_res_regionmerge[finemap_res_regionmerge$type != "SNP",]
 
 ```
 
 
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.5, SNP p_diff = 5e-8
+
+```{r}
+threshold_nonSNP_PIPs <- 0.5
+threshold_SNP_p <- "5e-08"
+```
 
 
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+
+
+
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.5, SNP p_diff = 5e-6
+
+```{r}
+threshold_nonSNP_PIPs <- 0.5
+threshold_SNP_p <- "5e-06"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-8
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-08"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-6
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-06"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4, 
+                        ncol = 4, 
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))   
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+gene_weird <- finemap_res_gene_origin[abs(finemap_res_gene_origin$z)< 1 & finemap_res_gene_origin$susie_pip > 0.3,]$id
+gene_weird_ldmismatch <- finemap_res_gene_ldmismatch[finemap_res_gene_ldmismatch$id %in% gene_weird,]
+
+
+prob_gene <- finemap_res_gene_origin[finemap_res_gene_origin$id %in% problematic_genes,]
+
+DT::datatable(gene_weird_ldmismatch,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Gene disappeared'),options = list(pageLength = 10) )
+
+DT::datatable(prob_gene,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Problematic genes'),options = list(pageLength = 10) )
+
+```
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-4
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-04"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4, 
+                        ncol = 4, 
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))   
+```
+
+
+
+
+# aFib-ebi-a-GCST006414
+
+## Setting: shared_all, thin = 0.1, L = 5, susieST
+
+```{r warning=F,message=F}
+trait <- "aFib-ebi-a-GCST006414"
+thin <- 0.1
+var_struc <- "shared_all"
+st <- "with_susieST"
+L <- 5
+
+ctwas_res_origin <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".finemap_regions_res.RDS"))
+finemap_res_origin <- ctwas_res_origin$finemap_res
+finemap_res_gene_origin <- finemap_res_origin[finemap_res_origin$type != "SNP",]
+
+ctwas_res_regionmerge <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".regionmerge_finemap_regions_res.RDS"))
+finemap_res_regionmerge <- ctwas_res_regionmerge$finemap_res
+finemap_res_gene_regionmerge <- finemap_res_regionmerge[finemap_res_regionmerge$type != "SNP",]
+
+```
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.5, SNP p_diff = 5e-8
+
+```{r}
+threshold_nonSNP_PIPs <- 0.5
+threshold_SNP_p <- "5e-08"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+
+
+
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.5, SNP p_diff = 5e-6
+
+```{r}
+threshold_nonSNP_PIPs <- 0.5
+threshold_SNP_p <- "5e-06"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-8
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-08"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) +
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4,
+                        ncol = 4,
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))
+```
+
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-6
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-06"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4, 
+                        ncol = 4, 
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))   
+```
+
+
+### Thresholds for ld mismatch diagnosis: nonSNP PIP = 0.2, SNP p_diff = 5e-4
+
+```{r}
+threshold_nonSNP_PIPs <- 0.2
+threshold_SNP_p <- "5e-04"
+```
+
+
+```{r warning=F,message=F, fig.height=5, fig.width=20}
+
+problematic_genes <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_problematic_genes_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+
+finemap_res_gene_origin$highlight <- ifelse(finemap_res_gene_origin$id %in% problematic_genes, "problematic genes", "good genes")
+
+p1 <- ggplot(data = finemap_res_gene_origin, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("Original ctwas results") +
+  theme_minimal()
+
+finemap_res_gene_regionmerge$highlight <- ifelse(finemap_res_gene_regionmerge$id %in% problematic_genes, "problematic genes", "good genes")
+
+p2 <- ggplot(data = finemap_res_gene_regionmerge, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("After region merge") +
+  theme_minimal()
+
+ctwas_res_ldmismatch <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatch <- ctwas_res_ldmismatch$finemap_res
+finemap_res_gene_ldmismatch <- finemap_res_ldmismatch[finemap_res_ldmismatch$type != "SNP",]
+finemap_res_gene_ldmismatch$highlight <- ifelse(finemap_res_gene_ldmismatch$id %in% problematic_genes, "problematic genes", "good genes")
+
+p3 <- ggplot(data = finemap_res_gene_ldmismatch, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+ctwas_res_ldmismatchnoLD <- readRDS(paste0(folder_results_susieST,trait,"/",trait,".",st,".thin",thin,".",var_struc,".L",L,".ldmismatch_noLD_finemap_regions_res_genepip",threshold_nonSNP_PIPs,"_snpp_",threshold_SNP_p,".RDS"))
+finemap_res_ldmismatchnoLD <- ctwas_res_ldmismatchnoLD$finemap_res
+finemap_res_gene_ldmismatchnoLD <- finemap_res_ldmismatchnoLD[finemap_res_ldmismatchnoLD$type != "SNP",]
+finemap_res_gene_ldmismatchnoLD$highlight <- ifelse(finemap_res_gene_ldmismatchnoLD$id %in% problematic_genes, "problematic genes", "good genes")
+
+p4 <- ggplot(data = finemap_res_gene_ldmismatchnoLD, aes(x= abs(z), y= susie_pip, color = highlight)) + 
+  geom_point() +
+  scale_color_manual(values = c("problematic genes" = "red", "good genes" = "black")) +
+  ggtitle("LD mismatch fixed -- remove the snp") +
+  theme_minimal()
+
+grid::grid.newpage()
+gridExtra::grid.arrange(p1,p2,p3,p4, 
+                        ncol = 4, 
+                        top = paste0(trait,"-nonSNP_PIPs:",threshold_nonSNP_PIPs,"-SNP_p:",threshold_SNP_p))   
+```
 
